<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterGroupActivity"
    android:layout_margin="15dp"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:gravity="center_vertical"
            android:text="@string/channel_name"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:paddingLeft="15dp"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/group_reg_edittext_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:textSize="16sp"
            android:paddingLeft="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:gravity="center_vertical"
            android:text="@string/url"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:paddingLeft="15dp"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/group_reg_edittext_url"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:textSize="16sp"
            android:paddingLeft="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:gravity="center_vertical"
            android:text="@string/web_port"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:paddingLeft="15dp"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/group_reg_edittext_webport"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:text="80"
            android:textSize="16sp"
            android:paddingLeft="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:gravity="center_vertical"
            android:text="@string/video_port"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:paddingLeft="15dp"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/group_reg_edittext_videoport"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:text="9001"
            android:textSize="16sp"
            android:paddingLeft="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:gravity="center_vertical"
            android:text="@string/id"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:paddingLeft="15dp"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/group_reg_edittext_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:text="admin"
            android:textSize="16sp"
            android:paddingLeft="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:gravity="center_vertical"
            android:text="@string/password"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:paddingLeft="15dp"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/group_reg_edittext_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:text="9999"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:orientation="horizontal"
        android:gravity="center|bottom">
        <Button
            android:id="@+id/group_reg_request_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:text="@string/registerbtn"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorWhite" />
        <Button
            android:id="@+id/group_reg_quit_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</LinearLayout>
